<resources>
    <string name="app_name">SnakesAndroid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_login">Логин</string>
    <string name="text_password">Пароль</string>
    <string name="to_come_in">Войти</string>
    <string name="authorization">Авторизация</string>
    <string name="register">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="create_game">Создать новую игру</string>
    <string name="connect_game">Подключиться к игре</string>
    <string name="connect_players">Подключение игроков</string>
    <string name="choose_game">Выбор игры</string>
    <string name="exit">Выйти</string>
    <string name="name_game">Название игры</string>
    <string name="table_recorde">Таблица рекордов</string>
    <string name="name">Имя игрока</string>
    <string name="number_points">кол-во очков</string>
    <string name="number_players">Количество игроков:</string>
    <string name="error_login_passwd_undefined">Поле логин или пароль не определены</string>
    <string name="error_num_players">Должно быть не меньше 1 и не больше 8 игроков</string>
    <string name="kick">kick</string>
</resources>
