<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.menu.createGame.CreateGameFragment"
    android:orientation="vertical"
    android:padding="@dimen/padding_16dp"
    android:weightSum="4">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etNameGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_game"
                    android:layout_marginTop="@dimen/et_margin_8dp"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/number_players"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"/>

                    <ImageButton
                        android:id="@+id/imgBtnMinus"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@android:drawable/arrow_down_float" />

                    <TextView
                        android:id="@+id/tvNumPlayers"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:text="1"
                        android:gravity="center"/>

                    <ImageButton
                        android:id="@+id/imgBtnPlus"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@android:drawable/arrow_up_float" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"/>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnCreateGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_game"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>